# ASEOfSmartICE

./: .gitignore  CLAUDE.md  google-drive-setup.md  package.json  supabase-mcp-wrapper.sh  supabase_mcp_setup.md  table_config.json  test_mcp.js  test_mcp_direct.js  test_opencv_cameras.py
.claude/agents/: system-health-monitor.md
.serena/: project.yml
.serena/memories/: camera_credentials_and_access.md  camera_hardware_info.md  code_style_conventions.md  project_overview.md  suggested_commands.md  tech_stack.md  training_pipeline_refactoring.md
features/: CLAUDE.md
features/region-state-detection/: logic.md  region-state-detection.py  region_config.json
features/table-state-detection/: logic.md  table-state-detection.py  table_config.json
production/RTX_3060/: AUTOMATED_DEPLOYMENT.md  CLAUDE.md  QUICK_START.md  README.md  REFACTORING_SUMMARY.md  interactive_start.py  performace-test.md  start.py  start.sh
production/RTX_3060/db/: database_schema_multicamera.sql
production/RTX_3060/scripts/: CAMERA_TESTING.txt  CHANGES_v2.1.0.md  EXAMPLE_LOG_OUTPUT.txt  GPU_QUEUE_UPGRADE_SUMMARY.txt  MODIFICATIONS_SUMMARY.md  NTP_SETUP_GUIDE.txt  QUICK_START_GPU_QUEUE.txt  STRUCTURE.md  ntp_cron_config.txt  run_interactive.sh  run_parallel_processing.sh  run_with_config.sh
sub-stream/: web_stream_preview.py  web_stream_yolo_detection.py  web_stream_yolo_optimized.py  web_stream_yolo_simple.py
test/: CLAUDE.md  camera_connection_agent.py  camera_connection_results_20250927_230658.json  camera_connection_results_20250927_230846.json  connection_methods_summary.py  functionality_test_agent.py  simple_functionality_test.py
test-model/: CLAUDE.md  test_with_screenshot.py  yolo_human_detection_plus_employee_detection.py.py
test-model/linux_rtx_video_streaming/: CLAUDE.md  SUPABASE_STATUS.md  capture_video_streams.py  manual_video_upload_test.py  test_supabase_upload.py  upload_existing_videos.py
test-model/linux_rtx_video_streaming/performance_test_20251113/: README.md  performance_analysis.py  performance_comparison_5fps.py  timing_log.txt
test-model/linux_rtx_video_streaming/scheduled_1hour_capture_7pm_8pm/: capture_1hour_continuous.py
test-model/one-stage-detection/: yolo_one_stage_detection.py
test-model/staff_customer_detector_v5_yolo11s/: CLAUDE.md  manual_camera_tester_pyav.py  realtime_detection_server.py  test_staff_customer_detector.py
test-model/staff_customer_detector_v5_yolo11s/backend-c/: API_REFERENCE.md  CMakeLists.txt  CMakeLists_original.txt  COMPLETION_REPORT.md  IMPLEMENTATION_REPORT.md  PROJECT_STATUS.md  QUICKSTART.md  QUICKSTART.sh  README.md  build.sh  install_deps.sh
test-model/staff_customer_detector_v5_yolo11s/backend-c/include/: camera_manager.h  http_server.h  inference_engine.h  lockfree_queue.hpp  thread_pool.h  utils.h  video_decoder.h
test-model/staff_customer_detector_v5_yolo11s/backend-c/src/: camera_manager.cpp  http_server.cpp  inference_engine.cpp  main.cpp  thread_pool.cpp  utils.cpp  video_decoder.cpp
test-model/staff_customer_detector_v5_yolo11s/backend-c/tests/: CMakeLists.txt  test_http_server.cpp  test_lockfree_queue.cpp  test_thread_pool.cpp
test-model/staff_customer_detector_v5_yolo11s/frontend-vue/: .gitignore  README.md  index.html  package.json  test-frontend.sh  vite.config.ts
test-model/staff_customer_detector_v5_yolo11s/templates/: detection_dashboard.html  manual_tester.html
test-model/staff_customer_detector_v5_yolo11s/testing-dashboard/: .gitignore  CLAUDE.md  restart_servers.sh  start.sh  test_30_cameras.sh  test_backend_capacity.sh  test_video_lag.sh
test-model/staff_detector_v4_yolo11n/: CLAUDE.md  README.txt  realtime_detection_server.py  test_staff_detector.py
test-model/staff_detector_v4_yolo11n/templates/: detection_dashboard.html
test-model/two-stage-detection/: yolo_two_stage_parallel.py  yolo_two_stage_sequential.py
test-model/two-stage-detection-advanced/: yolo_two_stage_advanced.py
test-model/two-stage-detection-plus-area-division/: roi_config.json  yolo_two_stage_roi.py
test-model/two-stage-detection-yolo11-cls/: yolo_two_stage_yolo11_cls.py
train-model/: CLAUDE.md  README.md  download_from_gdrive.sh  upload_to_gdrive.sh
train-model/linux_rtx_screenshot_capture/: camera_surveillance_master.sh  linux_capture_screenshots_to_supabase_resilient.py  sync_backup_queue.py
train-model/linux_scripts/: CLAUDE.md  README.md  camera_capture_wrapper.sh  camera_surveillance_master.sh  linux_capture_screenshots_to_supabase_resilient.py  setup_cron.sh  sync_backup_queue.py
train-model/model_v1/: CLAUDE.md
train-model/model_v1/labeled-persons/: duplicates_removed.txt
train-model/model_v1/scripts/: 1_capture_screenshots.py  2_extract_persons.py  3_label_images.py
train-model/model_v2/: CLAUDE.md
train-model/model_v2/dataset/: data.yaml
train-model/model_v2/labeled-persons/: labels.json
train-model/model_v2/scripts/: 1_download_from_supabase.py  2_extract_persons.py  3_label_images.py
train-model/model_v3/: CLAUDE.md
train-model/model_v3/dataset/: data.yaml
train-model/model_v3/scripts/: 1_download_from_supabase.py  2_extract_persons.py  3_label_images.py  (+5 more)
train-model/model_v4/: CLAUDE.md
train-model/scripts/: 4_prepare_dataset.py  5_train_model.py
unv-camera-detection/: CAMERA_SETUP_GUIDE.md  camera_capture_test.py  detect_cameras.py  smartice_cameras_config.json
(+621 files in other folders)
